# kinapsis-libs-svn

lib-im-msnp/trunk/: AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  config.h.in  configure.in.in
lib-im-msnp/trunk/admin/: am_edit
lib-im-msnp/trunk/src/: CMakeLists.txt  Makefile.am  buffer.cpp  buffer.h  challenge.cpp  challenge.h  chat.cpp  chat.h  chatlistener.cpp  chatlistener.h  client.cpp  client.h  cmdlogin.cpp  cmdlogin.h  cmdnotificationserver.cpp  cmdnotificationserver.h  cmdp2p.cpp  cmdp2p.h  cmdswichboardserver.cpp  cmdswichboardserver.h  command.h  commands.cpp  commands.h  connection.cpp  connection.h  connectionlistener.cpp  connectionlistener.h  contact.cpp  contact.h  context.cpp  context.h  filetransferlistener.cpp  filetransferlistener.h  libimmsnp.h  login.cpp  login.h  md5.cpp  md5.h  msn.cpp  msn.h  (+26 more)
lib-im-msnp/trunk/src/test/: Makefile.am  msn.cpp  msn.h
liboscar/trunk/: AUTHORS  CMakeLists.txt  Doxyfile  configure.in.in
liboscar/trunk/src/: CMakeLists.txt  Makefile.am  avatarlistener.cpp  avatarlistener.h  avatarprocess.cpp  avatarprocess.h  buffer.cpp  buffer.h  capabilities.cpp  capabilities.h  capabilitiestlv.cpp  capabilitiestlv.h  client.cpp  client.h  connection.cpp  connection.h  connectionlistener.cpp  connectionlistener.h  connectionresult.cpp  connectionresult.h  contact.cpp  contact.h  contactavatartlv.cpp  contactavatartlv.h  directconnectiontlv.cpp  directconnectiontlv.h  errortlv.cpp  errortlv.h  families.cpp  families.h  filereceiveservice.cpp  filereceiveservice.h  filesendservice.cpp  filesendservice.h  filetransferlistener.cpp  filetransferlistener.h  filetransferprocess.cpp  filetransferprocess.h  flap.cpp  flap.h  (+100 more)
libparser/: CMakeLists.txt  TODO  amsn.cpp  improgram.cpp  improgram.h  kopete.cpp  kopete.h  manager.cpp  manager.h  mercury.cpp  mercury.h  parseramsn.cpp  parseramsn.h  parserkopete.cpp  parserkopete.h  parsermercury.cpp  parsermercury.h  parserpidgin.cpp  parserpidgin.h  parserpsi.cpp  parserpsi.h  pidgin.cpp  pidgin.h  sim.cpp  sim.h  test.cpp
